# pgm2dng

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DCPprofiles/: Canon EOS 600D Lightroom profile.dcp  Canon EOS_5D_Mark_III_Cinelog_V3.0.dcp  Canon EOS_7D_Cinelog_V3.0.dcp  JI-D65.dcp  Ximea-MC031CG-SY-FV-StdA-D65.dcp
Libs/LibTiff/debug/lib/: jpeg.lib  lzma.lib  tiffd.lib  turbojpeg.lib  zlibd.lib
Libs/LibTiff/debug/lib/pkgconfig/: libjpeg.pc  liblzma.pc  libtiff-4.pc  libturbojpeg.pc
Libs/LibTiff/include/: lzma.h
Libs/LibTiff/lib/: tiff.lib
Libs/LibTiff/lib/pkgconfig/: libjpeg.pc  liblzma.pc  libtiff-4.pc  libturbojpeg.pc
Libs/LibTiff/share/libjpeg-turbo/: libjpeg-turboTargets-debug.cmake  libjpeg-turboTargets-release.cmake  libjpeg-turboTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/LibTiff/share/liblzma/: liblzma-targets-debug.cmake  liblzma-targets-release.cmake  liblzma-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/LibTiff/share/tiff/: tiff-config.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/LibTiff/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/LibTiff/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/LibTiff/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/libXMP/public/include/: XMP.incl_cpp
Samples/: BMPCC-4K-StdA-D65.dcp
doc/: DCP.MD
src/: cxxopts.hpp  dng_ext_image_writer.cpp  dng_ext_image_writer.h  pgm2dng.cpp  pgm2dng.sln  pgm2dng.vcxproj
src/DNG/: RawEnvironment.h  dng_big_table.cpp  dng_big_table.h  dng_date_time.cpp  dng_image_writer.cpp  dng_image_writer.h  dng_info.cpp  dng_local_string.cpp  dng_local_string.h  dng_misc_opcodes.h  dng_mutex.cpp  dng_negative.cpp  dng_negative.h  dng_pthread.cpp  dng_pthread.h  dng_read_image.cpp  dng_reference.cpp  dng_render.cpp  dng_resample.h  dng_safe_arithmetic.cpp  dng_safe_arithmetic.h  dng_simple_image.cpp  dng_simple_image.h  dng_string.cpp  dng_validate.cpp  dng_xmp_sdk.cpp
